--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -3,7 +3,7 @@
     <div class="vite-promo-thumb">
       <a
         class="vite-promo-link"
-        href="https://vitejs.dev/"
+        href="https://github.com/ValkinDED33/goit-js-hw-10"
         target="_blank"
         rel="noopener noreferrer"
         aria-label="Link to Vite official website"
@@ -20,15 +20,14 @@
       </a>
     </div>
     <h1 class="main-title">
-      <span class="main-title-gradient">Vite</span>
-      Template by
+      <span class="main-title-gradient"> ValkinDED</span>
+
       <a
         class="main-title-link"
-        href="https://github.com/goitacademy/vanilla-app-template"
+        href="https://github.com/ValkinDED33/goit-js-hw-10"
         target="_blank"
         rel="noopener noreferrer"
       >
-        GoIT
       </a>
     </h1>
   </div>
